# Hiroba-News-Smart-Monitor

./: Dockerfile  LICENSE  README.md  hiroba-news.yaml  index.html  main.py  mise.toml  pyproject.toml  run.py
.github/workflows/: docker-image.yml
charts/: helmfile.yaml
charts/hiroba-news/: Chart.yaml  values.yaml
charts/hiroba-news/charts/schedule-server/: Chart.yaml  values.yaml
charts/hiroba-news/charts/schedule-server/templates/: _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml
charts/hiroba-news/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml
src/: api.py  app.py  deps.py  external.py  settings.py
styles/: index.css
templates/: index.html
